# ds-launchpad

./: 02-data-processing.ipynb  LICENSE  README.md  environment.yml  pyproject.toml
00-tools/: pandas.ipynb
01-data-processsing/: data-processing.ipynb
deep-learning/: ann.ipynb
tools/: README.md  pandas.ipynb
