[project]
name = "ds-launchpad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "polars>=1.18.0",
    "scikit-learn>=1.6.0",
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
